Closed Bug 845491 Opened 11 years ago Closed 11 years ago

Unresponsive plugin/plug-in (hang dialog): Button width doesn't fit text size

Categories

(Core Graveyard :: Plug-ins, defect, P2)

x86
Windows XP
defect

Tracking

(firefox20 verified, firefox21 verified)

VERIFIED FIXED
Tracking Status
firefox20 --- verified
firefox21 --- verified

People

(Reporter: aryx, Assigned: bugzilla)

References

Details

Attachments

(2 files)

Firefox Aurora 20130226, Windows XP SP3 32 bit

At least the button for stopping an unresponsive plug-in doesn't fit the size of the text which can be longer when localized. See attached screenshot.
Assignee: nobody → aklotz
Attached patch Proposed patchSplinter Review
This patch queries the buttons in question for their ideal sizes and then resizes the dialog's buttons to fit the text.
Attachment #718778 - Flags: review?(jmathies)
Comment on attachment 718778 [details] [diff] [review]
Proposed patch

Nice!
Attachment #718778 - Flags: review?(jmathies) → review+
Priority: -- → P2
Comment on attachment 718778 [details] [diff] [review]
Proposed patch

[Approval Request Comment]
Bug caused by (feature/regressing bug #): 805591
User impact if declined: Buttons will be too small for their text in localized versions of Plugin Hang UI dialog box 
Testing completed (on m-c, etc.): Dialog buttons tested with combinations of long and short strings, ensuring that the buttons resized themselves to accommodate the longest string.
Risk to taking this patch (and alternatives if risky): Low.
String or UUID changes made by this patch: None
Attachment #718778 - Flags: approval-mozilla-beta?
Attachment #718778 - Flags: approval-mozilla-aurora?
Comment on attachment 718778 [details] [diff] [review]
Proposed patch

low risk patch for a new feature in Fx20. Patch helps with better user experience for people who may come across the issue with longer text.Approving for uplift
Attachment #718778 - Flags: approval-mozilla-beta?
Attachment #718778 - Flags: approval-mozilla-beta+
Attachment #718778 - Flags: approval-mozilla-aurora?
Attachment #718778 - Flags: approval-mozilla-aurora+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Whiteboard: [leave open]
Verified fixed with the German build of Firefox 20 beta 3.

User Agent: Mozilla/5.0 (Windows NT 5.1; rv:20.0) Gecko/20100101 Firefox/20.0
Build ID: 20130305164032
QA Contact: manuela.muntean
Also verified with the latest German Nightly (build ID: 20130305030833) and Aurora (build ID: 20130305042015) builds.
Status: RESOLVED → VERIFIED
No resolved at all. 
I have encountered HUNDREDS of such cases for many months. With every Firefox upgrade I hoped for a solution.
Symptom: Firefox hangs for close to a minute, often blocking the entire Windows GUI (no response to mouse movement) and than displays the dreaded "Unresponsive plugin" message. That message has a box "Don't ask me again." Despite of being checked numerous times, the box pop's up over and over and over. We went through at least 10 Firefox updates since it started, and such was also a number of diverse Adobe plugin updates: Flash, Shockwave etc. 

I think the issue is among other problems that Firefox executes this plugin start in a wrong thread, what blocks the GUI.
(In reply to ThomasH from comment #11)
> No resolved at all. 
> I have encountered HUNDREDS of such cases for many months. With every
> Firefox upgrade I hoped for a solution.
> Symptom: Firefox hangs for close to a minute, often blocking the entire
> Windows GUI (no response to mouse movement) and than displays the dreaded
> "Unresponsive plugin" message. That message has a box "Don't ask me again."
> Despite of being checked numerous times, the box pop's up over and over and
> over. We went through at least 10 Firefox updates since it started, and such
> was also a number of diverse Adobe plugin updates: Flash, Shockwave etc. 
> 
> I think the issue is among other problems that Firefox executes this plugin
> start in a wrong thread, what blocks the GUI.

Hi ThomasH, this bug is for buttons in the dialog box that were not sized large enough to hold their text, which has been resolved. The issue that you are raising is unrelated to this bug. I have filed bug 950516 to discuss your problem further. Let's continue this discussion over there. Thanks!
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: