Bug 845491: Make Plugin Hang UI push buttons automatically resize to fit their text. r=jmathies